# Commerce-Intelligent-Interface

./: .gitignore  docker-compose.yml  nginx.conf
ai/: .env  dockerfile  main.py  pyproject.toml
ai/core/enums/: models.py
ai/store/nlp/prompts/: factory.py
ai/store/vectordb/: factory.py  interface.py
analysis/: pyproject.toml
assets/chromadb/: chroma.sqlite3
assets/templates/: index.html
backend/: dockerfile
dev/data/: data.csv
dev/notebooks/: create_vdb.ipynb
genai/: .env  dockerfile
server/: .env  alembic.ini  dockerfile  main.py  pyproject.toml
server/core/: __init__.py  config.py  db.py
server/core/schemas/: user.py
server/models/: car.py  order.py  user.py  user_model.py
server/routes/: user.py
server/services/: user.py  user_service.py
